--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.6;
+}
+
+img{
+    max-width: 35%;
+}
