--- a/style.css
+++ b/style.css
@@ -33,3 +33,19 @@ ul{
 a{
     text-decoration: none;
 }
+.navbar{
+    position: sticky;
+    height: 60px;
+    background-color: #333554;
+}
+.navbar .container{
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    align-items: center;
+}
+.logo{
+    font-size: 24px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
