--- a/style.css
+++ b/style.css
@@ -30,8 +30,9 @@ ul{
     list-style-type: none;
 }
 
-a{
+.navbar a{
     text-decoration: none;
+    color: #FFFFFF;
 }
 .navbar{
     position: sticky;
@@ -48,4 +49,12 @@ a{
     font-size: 24px;
     font-weight: bold;
     color: #FFFFFF;
+}
+
+.navbar ul{
+    display: flex;
+}
+
+.navbar ul li{
+    margin-left: 20px;
 }
