--- a/style.css
+++ b/style.css
@@ -86,3 +86,9 @@ ul{
     width: 400px;
     margin-bottom: 20px;
 }
+
+.hero .main-text p{
+    font-size: 18px;
+    width: 500px;
+    margin-bottom: 20px;
+}
