--- a/style.css
+++ b/style.css
@@ -18,9 +18,6 @@ body{
     border: 2px solid #FFC107;
 }
 
-.box img{
-    max-width: 20%;
-}
 
 .container{
     max-width: 1100px;
@@ -116,10 +113,18 @@ ul{
 .sectionA .container{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     min-height: 400px;
-    text-align: center;
+    gap: 10px;
+}
+.sectionA .container .boxes{
+    display: flex;
+    gap: 20px;
 }
 
-
+.sectionA .boxes img{
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 10px;
+}
