--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ ul{
 
 .hero .main-text button a{
     text-decoration: none;
-    color: #FFFFFF;
+    color: #1a1e3b;
     font-size: 14px;
     font-weight: 700;
 }
@@ -127,7 +127,7 @@ ul{
     width: 230px;
     height: auto;
     border-radius: 10px;
-    border: 2px solid #FFC107;
+    border: 2px solid #1a1e3b;
 }
 
 .sectionA .container h2{
@@ -153,4 +153,14 @@ ul{
     background-color: #0B0F2B;
     border-radius: 10px;
     padding: 10px;
+}
+
+.sectionA .boxes .box .add{
+    background-color: #0B0F2B;
+    border-radius: 10px;
+    padding: 25px;
+}
+
+.sectionA .boxes .box .extra{
+    padding: 24.5px;
 }
