--- a/style.css
+++ b/style.css
@@ -164,3 +164,10 @@ ul{
 .sectionA .boxes .box .extra{
     padding: 24.5px;
 }
+
+.sectionB .container{
+    display: flex;
+    min-height: 300px;
+    justify-content: center;
+    align-items: center;
+}
