--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     max-width: 40%;
     border-radius: 10px;
     border: 2px solid #FFC107;
+    flex: 1;
 }
 
 
@@ -52,6 +53,7 @@ ul{
     justify-content: space-between;
     height: 100%;
     align-items: center;
+    flex-wrap: wrap;
 }
 .logo{
     font-size: 24px;
@@ -65,6 +67,7 @@ ul{
 
 .navbar ul li{
     margin-left: 20px;
+    flex: 1;
 }
 
 .hero{
@@ -77,6 +80,7 @@ ul{
     align-items: center;
     min-height: 500px;
     gap: 70px;
+    flex-wrap: wrap;
 }
 
 .hero .main-text{
@@ -95,6 +99,7 @@ ul{
     width: 500px;
     margin-bottom: 20px;
     line-height: 1.9;
+    flex: 1;
 }
 
 .hero .main-text button{
